--- a/V2rayU/Base.lproj/ConfigWindow.xib
+++ b/V2rayU/Base.lproj/ConfigWindow.xib
@@ -27,11 +27,11 @@
                 <outlet property="httpPort" destination="qKn-0S-Rtu" id="VHi-5A-DCO"/>
                 <outlet property="importBtn" destination="wJc-Ty-Mof" id="JZU-VA-AlL"/>
                 <outlet property="jsonUrl" destination="5cY-nr-cxd" id="Wta-10-haj"/>
+                <outlet property="kcpCongestion" destination="BUA-Pf-he7" id="FUI-kD-Pnu"/>
                 <outlet property="kcpDownlinkCapacity" destination="56I-AM-Thb" id="s3q-QJ-8RH"/>
                 <outlet property="kcpHeader" destination="8JB-cZ-Hzp" id="fUQ-D4-Tyu"/>
                 <outlet property="kcpMtu" destination="bS7-lZ-JZ9" id="DcY-x3-Oor"/>
                 <outlet property="kcpReadBufferSize" destination="Kwv-43-3ZS" id="wcL-iS-QWD"/>
-                <outlet property="kcpSuggest" destination="BUA-Pf-he7" id="5lf-Ur-reC"/>
                 <outlet property="kcpTti" destination="bBg-iY-haa" id="nsH-Gn-0Zc"/>
                 <outlet property="kcpUplinkCapacity" destination="Tqs-Wj-roi" id="Lcp-W1-EJ2"/>
                 <outlet property="kcpView" destination="rPy-7B-YDh" id="UKp-9S-ozl"/>
@@ -43,14 +43,14 @@
                 <outlet property="serverView" destination="WFH-OH-xrz" id="nYy-th-oU7"/>
                 <outlet property="serversTableView" destination="iEj-cB-TDD" id="5vp-u9-fUZ"/>
                 <outlet property="shadowsockAddr" destination="oDg-bp-Q8T" id="RqP-Jo-gMx"/>
+                <outlet property="shadowsockMethod" destination="CAW-Tw-BTW" id="13l-RI-Wjx"/>
                 <outlet property="shadowsockPass" destination="iLs-pG-SIK" id="tC4-99-ell"/>
                 <outlet property="shadowsockPort" destination="IY0-st-Y0l" id="aWC-wL-I85"/>
-                <outlet property="shadowsockSecurity" destination="CAW-Tw-BTW" id="hdm-7c-A04"/>
                 <outlet property="sockPort" destination="o4j-kY-zc1" id="1nh-60-kn2"/>
-                <outlet property="socksAddr" destination="Z64-HN-v36" id="aa2-vc-wf9"/>
-                <outlet property="socksPass" destination="TSR-kV-uGh" id="PuU-LU-Gd8"/>
-                <outlet property="socksPort" destination="dlc-80-VBD" id="GYF-AQ-xAN"/>
-                <outlet property="socksUser" destination="KcQ-sL-Voa" id="pax-oa-9yd"/>
+                <outlet property="socks5Addr" destination="Z64-HN-v36" id="N8w-MO-caR"/>
+                <outlet property="socks5Pass" destination="TSR-kV-uGh" id="iON-WD-6rs"/>
+                <outlet property="socks5Port" destination="dlc-80-VBD" id="aCo-e1-1Mt"/>
+                <outlet property="socks5User" destination="KcQ-sL-Voa" id="rda-Hr-Etb"/>
                 <outlet property="streamAllowSecure" destination="sZn-gP-qfu" id="swH-bt-cEb"/>
                 <outlet property="streamSecurity" destination="Y2a-uR-gaD" id="C9f-OY-8ca"/>
                 <outlet property="streamTlsServerName" destination="0fs-AE-NdV" id="mde-Ib-BDD"/>
@@ -168,7 +168,7 @@ Gw
                         <font key="font" metaFont="system"/>
                         <tabViewItems>
                             <tabViewItem label="Import" identifier="" id="BS9-X1-ueN">
-                                <view key="view" ambiguous="YES" id="Ab3-ML-cu8">
+                                <view key="view" id="Ab3-ML-cu8">
                                     <rect key="frame" x="10" y="33" width="394" height="491"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
@@ -261,7 +261,7 @@ Gw
                                             </scroller>
                                         </scrollView>
                                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gyE-Zy-64R">
-                                            <rect key="frame" x="5" y="-4" width="381" height="16"/>
+                                            <rect key="frame" x="5" y="0.0" width="381" height="16"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <textFieldCell key="cell" lineBreakMode="clipping" id="wIV-Kw-tAz">
                                                 <font key="font" metaFont="smallSystem"/>
@@ -273,7 +273,7 @@ Gw
                                 </view>
                             </tabViewItem>
                             <tabViewItem label="Manual" identifier="" id="qq1-yV-VsK">
-                                <view key="view" id="YXI-Uw-7SR">
+                                <view key="view" ambiguous="YES" id="YXI-Uw-7SR">
                                     <rect key="frame" x="10" y="33" width="394" height="491"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
@@ -572,15 +572,21 @@ Gw
                                                                     <popUpButton verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Pj0-ZW-RX6">
                                                                         <rect key="frame" x="73" y="9" width="214" height="25"/>
                                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                                                        <popUpButtonCell key="cell" type="push" title="aes-128-cfb" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" selectedItem="KlG-Se-6jg" id="Ikf-53-LUn">
+                                                                        <popUpButtonCell key="cell" type="push" title="auto (suggested)" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" selectedItem="hCD-ZD-xad" id="Ikf-53-LUn">
                                                                             <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
                                                                             <font key="font" metaFont="system"/>
                                                                             <menu key="menu" id="WhF-NB-ypf">
                                                                                 <items>
-                                                                                    <menuItem title="aes-128-cfb" state="on" id="KlG-Se-6jg"/>
-                                                                                    <menuItem title="aes-128-gcm" id="kQd-TH-yS8"/>
-                                                                                    <menuItem title="chacha20-poly1305" id="eoZ-FS-dwe"/>
-                                                                                    <menuItem title="auto (suggested)" id="hCD-ZD-xad">
+                                                                                    <menuItem title="auto (suggested)" state="on" id="hCD-ZD-xad">
+                                                                                        <modifierMask key="keyEquivalentModifierMask"/>
+                                                                                    </menuItem>
+                                                                                    <menuItem title="aes-128-cfb" id="KlG-Se-6jg">
+                                                                                        <modifierMask key="keyEquivalentModifierMask"/>
+                                                                                    </menuItem>
+                                                                                    <menuItem title="aes-128-gcm" id="kQd-TH-yS8">
+                                                                                        <modifierMask key="keyEquivalentModifierMask"/>
+                                                                                    </menuItem>
+                                                                                    <menuItem title="chacha20-poly1305" id="eoZ-FS-dwe">
                                                                                         <modifierMask key="keyEquivalentModifierMask"/>
                                                                                     </menuItem>
                                                                                     <menuItem title="none" id="Dhx-Pm-4vm">
@@ -716,7 +722,7 @@ Gw
                                                                     </textField>
                                                                 </subviews>
                                                             </view>
-                                                            <view hidden="YES" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JY4-cp-0Rx" userLabel="Socks">
+                                                            <view hidden="YES" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JY4-cp-0Rx" userLabel="Socks5">
                                                                 <rect key="frame" x="0.0" y="0.0" width="358" height="140"/>
                                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                 <subviews>
